@@ -1,7 +1,7 @@
 numpy
 rcsb.utils.io >= 0.48
 rcsb.db >= 0.942
-rcsb.utils.chemref >= 0.28
+rcsb.utils.chemref >= 0.30
 rcsb.utils.citation >= 0.13
 rcsb.utils.config >= 0.25
 rcsb.utils.ec >= 0.16
